Fixed overflows in sample proof and reduced padding for small devices.

--- a/themes/portfolio/portfolio.scss
+++ b/themes/portfolio/portfolio.scss
@@ -326,7 +326,7 @@ $hero-height: 100vh;
     }
   }
   .section-content {
-    width: 90%;
+    width: 95%;
   }
   .eqn-labeled {
     overflow-x: scroll;
